package pkg2024ft22vfinal;

public class Ciclos {

    private String nombre;
    private int id;

    public Ciclos(int id, String nuevonombre) {
        this.id = id;
        this.nombre = nuevonombre;
    }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

}
